[gd_scene load_steps=5 format=3 uid="uid://cyh0amjo5p13s"]

[ext_resource type="Script" path="res://Scripts/UI/dialogue_box.gd" id="1_ia0ef"]

[sub_resource type="LabelSettings" id="LabelSettings_t8wu1"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wwxjj"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_wwtvl"]
line_spacing = 0.0
font_size = 14

[node name="DialogueBox" type="CanvasLayer"]
visible = false
script = ExtResource("1_ia0ef")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -50.0
offset_right = 125.0
offset_bottom = 50.0
grow_vertical = 2
mouse_filter = 0

[node name="Content" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 175.0
offset_top = 25.0
offset_right = 1125.0
offset_bottom = 125.0
mouse_filter = 0

[node name="Name" type="Label" parent="Control/Content"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 0
text = "Vecchietto"
label_settings = SubResource("LabelSettings_t8wu1")
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 4

[node name="Text" type="Label" parent="Control/Content"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 0
text = "Hey ciao come stai io sto bene e tu come stai? Stai come devi stare, ecco come. Hey ciao come stai io sto bene e tu come stai? Stai come devi stare, ecco come. Hey ciao come stai io sto bene e tu come stai? Stai come devi stare, ecco come. Hey ciao come stai io sto bene e tu come stai? Stai come devi stare, ecco come. Hey ciao come stai io sto bene e tu come stai? Stai come devi stare, ecco come. Hey ciao come stai io sto bene e tu come stai? Stai come devi stare, ecco come. "
label_settings = SubResource("LabelSettings_wwxjj")
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 4

[node name="Button" type="Button" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Answers" type="VBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -262.0
offset_top = -328.0
offset_right = -12.0
offset_bottom = -148.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0

[node name="Spacer" type="Control" parent="Answers"]
layout_mode = 2
size_flags_vertical = 3

[node name="Option1" type="Button" parent="Answers"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Answers/Option1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Si"
label_settings = SubResource("LabelSettings_wwtvl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Option2" type="Button" parent="Answers"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Answers/Option2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No"
label_settings = SubResource("LabelSettings_wwtvl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Option3" type="Button" parent="Answers"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="Answers/Option3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Forse"
label_settings = SubResource("LabelSettings_wwtvl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="Answers"]
layout_mode = 2
size_flags_vertical = 3
